5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1671_1079.log
== SUBMITION (2019-04-28 18:55:14) 
-- CODE:
from math import *

a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print('Entradas:', a, ",", b,"," , c)

# Testa se pelo menos uma das entradar e negativa 
if (((a)or(b)or(c))<=0):
    # Testa se medidas correspondem a um triangulo
    print('Area: invalida')
else:

    if ((a+c)>b):
        s = (a + b + c) / 2.0
        area = sqrt(s * (s-a) * (s-b) * (s-c))
        area = round(area, 3)
        print('Area: invalida')
    else:
        print('area valida')
-- EXECUTION TIME:
0.182394
-- TEST CASE 1:
---- input:
-11.0
22.0
33.0
---- correct output:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
---- user output:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
-- TEST CASE 2:
---- input:
1.61
2.40
2.89
---- correct output:
Entradas: 1.61 , 2.4 , 2.89
Area: 1.932
---- user output:
Entradas: 1.61 , 2.4 , 2.89
Area: invalida
-- TEST CASE 3:
---- input:
11.0
22.0
33.0
---- correct output:
Entradas: 11.0 , 22.0 , 33.0
Area: invalida
---- user output:
Entradas: 11.0 , 22.0 , 33.0
Area: invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:55:37) 
-- CODE:
from math import *

a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print('Entradas:', a, ",", b,"," , c)


if (((a)or(b)or(c))<=0):
    # Testa se medidas correspondem a um triangulo
    print('Area: invalida')
else:

    if ((a+c)>b):
        s = (a + b + c) / 2.0
        area = sqrt(s * (s-a) * (s-b) * (s-c))
        area = round(area, 3)
        print('Area: invalida')
    else:
        print('area valida')
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:46:09) 
-- CODE:
from math import *

a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print('Entradas:', a, ",", b,"," , c)


if (((a)or(b)or(c))<=0):
    print('Area: invalida')
else:

    if ((a+c)>b):
        s = (a + b + c) / 2.0
        area = sqrt(s * (s-a) * (s-b) * (s-c))
        area = round(area, 3)
        print('Area: invalida')
    else:
        print('area valida')
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:51:28) 
-- CODE:
from math import *

a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print('Entradas:', a, ",", b,"," , c)


if (((a)or(b)or(c))<=0):
    print('Area: invalida')
else:
	if ((a+b)>c) and ((a+c)>b) and ((b+c)>a):
			s = (a + b + c) / 2.0
        area = sqrt(s * (s-a) * (s-b) * (s-c))
        area = round(area, 3)
			print(area)
-- ERROR:
File "XXXX", line 15
    area = sqrt(s * (s-a) * (s-b) * (s-c))
                                         ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:51:43) 
-- CODE:
from math import *

a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print('Entradas:', a, ",", b,"," , c)


if (((a)or(b)or(c))<=0):
    print('Area: invalida')
else:
	if ((a+b)>c) and ((a+c)>b) and ((b+c)>a):
			s = (a + b + c) / 2.0
			area = sqrt(s * (s-a) * (s-b) * (s-c))
			area = round(area, 3)
			print(area)
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:53:07) 
-- CODE:
from math import *

a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print('Entradas:', a, ",", b,"," , c)


if (((a)or(b)or(c))<=0):
    print('Area: invalida')
else:
	if ((a+b)>c) and ((a+c)>b) and ((b+c)>a):
			s = (a + b + c) / 2.0
			area = sqrt(s * (s-a) * (s-b) * (s-c))
			area = round(area, 3)
			print("Area:",area)
	else:
		print("Area: invalida")
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 09:53:21) 
-- CODE:
from math import *

a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print('Entradas:', a, ",", b,"," , c)


if (((a)or(b)or(c))<=0):
    print('Area: invalida')
else:
	if ((a+b)>c) and ((a+c)>b) and ((b+c)>a):
			s = (a + b + c) / 2.0
			area = sqrt(s * (s-a) * (s-b) * (s-c))
			area = round(area, 3)
			print("Area:",area)
	else:
		print("Area: invalida")
-- EXECUTION TIME:
0.245062
-- TEST CASE 1:
---- input:
-11.0
22.0
33.0
---- correct output:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
---- user output:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
-- TEST CASE 2:
---- input:
1.61
2.40
2.89
---- correct output:
Entradas: 1.61 , 2.4 , 2.89
Area: 1.932
---- user output:
Entradas: 1.61 , 2.4 , 2.89
Area: 1.932
-- TEST CASE 3:
---- input:
11.0
22.0
33.0
---- correct output:
Entradas: 11.0 , 22.0 , 33.0
Area: invalida
---- user output:
Entradas: 11.0 , 22.0 , 33.0
Area: invalida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:58:01) 
-- CODE:
from math import *

a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print('Entradas:', a, b, c)


if (((a)or(b)or(c))<=0):
    print('Area: invalida')
else:
	if ((a+b)>c) and ((a+c)>b) and ((b+c)>a):
			s = (a + b + c) / 2.0
			area = sqrt(s * (s-a) * (s-b) * (s-c))
			area = round(area, 3)
			print("Area:",area)
	else:
		print("Area: invalida")
-- OUTPUT:
Entradas: -11.0 22.0 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:58:28) 
-- CODE:
from math import *

a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print('Entradas:', a, ",", b,"," , c)


if (((a)or(b)or(c))<=0):
    print('Area: invalida')
else:
	if ((a+b)>c) and ((a+c)>b) and ((b+c)>a):
			s = (a + b + c) / 2.0
			area = sqrt(s * (s-a) * (s-b) * (s-c))
			area = round(area, 3)
			print("Area:area)
	else:
		print("Area: invalida")
-- ERROR:
File "XXXX", line 17
    print("Area:area)
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:58:47) 
-- CODE:
from math import *

a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print('Entradas:', a, ",", b,"," , c)


if (((a)or(b)or(c))<=0):
    print('Area: invalida')
else:
	if ((a+b)>c) and ((a+c)>b) and ((b+c)>a):
			s = (a + b + c) / 2.0
			area = sqrt(s * (s-a) * (s-b) * (s-c))
			area = round(area, 3)
			print("Area:",area)
	else:
		print("Area: invalida")
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
